# trusas-gstreamer

./: extract_sync.sh  janus_ts_video.coffee  live_view.sh  package.json  record_h264.coffee
gstabstime/: AUTHORS  COPYING  configure.ac
gstabstime/src/: Makefile.am  gstabstime.c  gstabstime.h  libgstabstime.la  libgstabstime_la-gstabstime.lo
gstabstime/src/.libs/: libgstabstime.exp  libgstabstime.la  libgstabstime.lai  libgstabstime.ver
